# poem-plugins

./: .gitignore  .gray.conf  .pre-commit-config.yaml  LICENCE  README.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: tests.yml
poem/: base.py  config.py
poem/versions/: git.py
poem_plugins/: base.py  config.py
poem_plugins/config/: __init__.py  base.py  git.py
poem_plugins/dispatchers/: base.py  version.py  versions.py
poem_plugins/general/: strenum.py
poem_plugins/general/version/: __init__.py
poem_plugins/general/version/drivers/: __init__.py  git.py
poem_plugins/general/version_driver/: base.py  git.py
poem_plugins/general/versions/drivers/: __init__.py  git.py
poem_plugins/handlers/: __init__.py  base.py  version.py
poem_plugins/plugins/: __init__.py  base.py  version.py  versions.py
poem_plugins/versions/: __init__.py  git.py
tests/: conftest.py
tests/general/: test_config.py
tests/general/versions/drivers/: conftest.py  test_git_long.py
tests/general/versions/drivers/git/: test_bump_segment.py  test_long.py  test_short.py  test_version_prefix.py
tests/plugins/: conftest.py  test_git_long.py  test_versions.py
tests/plugins/versions/: conftest.py  test_git.py
tests/version_drivers/: conftest.py  test_git_long.py
