[tool.poetry]
name = "poem-plugins"
version = "0.11.0"
description = "Some set of poetry plugins"
authors = ["Ivan Sitkin <alvinera@yandex.ru>"]
homepage = "https://github.com/alviner/poem-plugins"
license = "MIT"
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Operating System :: POSIX",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python",
]
readme = "README.md"
packages = [{include = "poem_plugins"}]

[tool.poetry.dependencies]
python = "^3.9"
poetry = "^1.2"

[tool.poetry.group.dev.dependencies]
mypy = "^0.991"
pylama = "^8.4.1"
pytest = "^7.2.0"
debugpy = "^1.6.4"
pytest-cov = "^4.0.0"
coveralls = "^3.3.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
allow_subclassing_any = true
allow_untyped_calls = true
allow_untyped_decorators = true
ignore_missing_imports = true
implicit_reexport = true
pretty = true
show_error_codes = true
strict = true
warn_return_any = false
files = "poem_plugins/**/*.py"

[tool.pylama]
paths = "poem_plugins"
skip = "*/.venv/*,*/build/*"
linters = "pycodestyle,pyflakes,mccabe"

[tool.pylama.linter.pycodestyle]
max_line_length = 80

[tool.coverage.report]
skip_empty = true

[tool.coverage.run]
branch = true
source = ["poem_plugins"]

[tool.poetry.plugins."poetry.plugin"]
poem-git-long-version-plugin = "poem_plugins.versions.git:GitLongVersionPlugin"
