[tool.poetry]
name = "poem-plugins"
version = "1.0.2"
description = "Some set of poetry plugins"
authors = ["Ivan Sitkin <alvinera@yandex.ru>"]
repository = "https://github.com/alviner/poem-plugins"
homepage = "https://pypi.org/project/poem-plugins"
documentation = "https://github.com/alviner/poem-plugins"
keywords = ["plugins", "poetry", "packaging", ]
license = "MIT"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "Intended Audience :: Information Technology",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Operating System :: POSIX",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python",
    "Topic :: Software Development :: Build Tools",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
readme = "README.md"
packages = [{include = "poem_plugins"}]

[tool.poetry.dependencies]
python = "^3.9"
poetry = ">=1.5.0,<3.0.0"

[tool.poetry.group.dev.dependencies]
mypy = ">=0.991,<1.16"
pylama = "^8.4.1"
pytest = ">=7.2,<9.0"
debugpy = "^1.6.4"
pytest-cov = ">=4,<6"
coveralls = "^3.3.1"
pytest-mock = "^3.10.0"
gray = ">=0.13,<0.16"
pre-commit = ">=2.21,<5.0"
msgpack = ">=1.1.0"
cffi = ">=1.17.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
allow_subclassing_any = true
allow_untyped_calls = true
allow_untyped_decorators = true
ignore_missing_imports = true
implicit_reexport = true
pretty = true
show_error_codes = true
strict = true
warn_return_any = false
files = "poem_plugins/**/*.py"

[tool.pylama]
paths = "poem_plugins"
skip = "*/.venv/*,*/build/*"
linters = "pycodestyle,pyflakes,mccabe"

[tool.pylama.linter.pycodestyle]
max_line_length = 80

[tool.isort]
profile = "black"

[tool.black]
line-length = 79
target-version = ["py39", "py310", "py311"]

[tool.coverage.report]
skip_empty = true

[tool.coverage.run]
branch = true
source = ["poem_plugins"]

[tool.poetry.plugins."poetry.application.plugin"]
poem-version-plugin = "poem_plugins.plugins:VersionPlugin"

[tool.poem-plugins.version]
provider = "git"
# Save new version on pyproject
update_pyproject = true

[tool.poem-plugins.version.git]
# Version tags must be starts with this prefix
version_prefix = "v"
# Version format with commit hash (long) or not (short)
format = "short"
